# job-hunter

./: .env.example  .gitignore  README.md  cv.example.md  pyproject.toml
.github/workflows/: weekly_run.yml
src/: config.py  db.py  main.py  models.py  notifier.py  scorer.py
src/scrapers/: base.py  hasjob.py  hn.py  internshala.py  wellfound.py  yc.py
tests/: test_notifier.py  test_scorer.py
tests/fixtures/: sample_jobs.json
